# BookMeApi

./: .env  Cargo.toml  README.md
migrations/2024-02-05-140557_create_users/: up.sql
migrations/2024-02-05-141715_create_posts/: up.sql
src/: main.rs  schema.rs
src/controllers/: mod.rs  post_controller.rs  user_controller.rs
src/lib/: lib.rs
src/models/: mod.rs  post_model.rs  user_model.rs
src/service/: user_service.rs
tests/: quick_dev.rs
